# poulpe

./: CMakeLists.txt  README.md  test.md  test1.md  test2.md
demo/: CMakeLists.txt
demo/inc/demo/: application.h  error.h  log.h  renderer.h  ui.h  window.h
demo/src/demo/: application.c  error.c  log.c  main.c  renderer.c  ui.c  window.c
demo/tests/: test.frag
example/: CMakeLists.txt
inc/: poulpe.h
inc/poulpe/: component.h  display.h  editor.h  error.h  event.h  history.h  io.h  language.h  layout.h  log.h  style.h  text.h  textbuffer.h  theme.h
inc/poulpe/components/: cursor.h  cursorinfo.h  eofinfo.h  finder.h  indentinfo.h  layout.h  linenumber.h  rectangle.h  selection.h  statusbar.h  tabitem.h  tabmenu.h  tabview.h  textedit.h  textinfo.h  textview.h
inc/poulpe/languages/: c.h  glsl.h  json.h
src/poulpe/: component.c  display.c  editor.c  error.c  history.c  io.c  language.c  layout.c  log.c  style.c  text.c  textbuffer.c  theme.c
src/poulpe/components/: cursor.c  cursorinfo.c  eofinfo.c  finder.c  indentinfo.c  layout.c  linenumber.c  rectangle.c  selection.c  statusbar.c  tabitem.c  tabmenu.c  tabview.c  textedit.c  textinfo.c  textview.c
